--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>projectrc | luxass</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="luxass.dev" />
+    <meta property="og:url" content="https://projectrc.luxass.dev" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="https://image.luxass.dev/api/image/text?width=300&height=300" />
+
+    <!-- twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://projectrc.luxass.dev" />
+    <meta property="twitter:title" content="" />
+    <meta property="twitter:description" content="" />
+    <meta property="twitter:image" content="https://image.luxass.dev/api/image/text?width=300&height=300" />
   </head>
   <body>
     <div id="app"></div>
